happyminds/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-happyminds
  namespace: happyminds
spec:
  selector:
    matchLabels:
      app: wordpress-happyminds
  replicas: 0
  template:
    metadata:
      labels:
        app: wordpress-happyminds
    spec:
      securityContext:
        fsGroup: 33
      containers:
        - name: wordpress
          image: wordpress:6.9.4
          ports:
            - containerPort: 80
          volumeMounts:
            - name: wp-content
              mountPath: /var/www/html/wp-content
            - name: wp-config-extra
              mountPath: /var/www/html/wp-config-extra.php
              subPath: wp-config-extra.php
      volumes:
        - name: wp-content
          persistentVolumeClaim:
            claimName: wp-content-pvc
        - name: wp-config-extra
          configMap:
            name: wp-config-extra
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-happyminds
  namespace: happyminds
spec:
  selector:
    app: wordpress-happyminds
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
